@@ -33,7 +33,7 @@ indexpage:
         - title: "VM Creation from a Snapshot"
           url: ../containers/rh-os-n_use_case_openshift_virtualization_workflow_vm_from_snapshot.html
 #
-    - title: "Data Protection"
+    - title: "Data Protection using 3rd party"
       links:
         - title: "Overview"
           url: ../containers/rh-os-n_use_case_openshift_virtualization_dataprotection_overview.html
