@@ -32,7 +32,7 @@ entries:
       - title: "VM Creation from a Snapshot"
         url: /containers/rh-os-n_use_case_openshift_virtualization_workflow_vm_from_snapshot.html
 #
-  - title: "Data Protection"
+  - title: "Data Protection Using Third Party Tools"
     entries:
       - title: "Overview"
         url: /containers/rh-os-n_use_case_openshift_virtualization_dataprotection_overview.html
@@ -52,7 +52,12 @@ entries:
       - title: "Cloud Insights Integration"
         url: /containers/rh-os-n_use_case_openshift_virtualization_ci_integration.html
       - title: "Sample Monitoring"
-        url: /containers/rh-os-n_use_case_openshift_virtualization_ci_samples.html
+        url: /containers/rh-os-n_use_case_openshift_virtualization_ci_samples.html  
+#
+  - title: "Best Practices Recommendation"
+    entries:
+      - title: "Best practices guide"
+        url: /containers/rh-os-n_use_case_openshift_virtualization_bpg.html
 #
   - title: "Additional Resources"
     url: /containers/additional-resources.html
