@@ -3,6 +3,9 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::containers[]
+| 09/13/2024 | Red Hat OpenShift Virtualization | Added Best Practices Guide for OpenShift VMs
+// end::containers[]
 // tag::vmware[]
 | 08/23/2024 | Virtualization | Added VMFS Deployment Guide
 // end::vmware[]
